Refactor UserConditionController and DTOs for improved readability and consistency
- Updated UserConditionController to enhance method formatting and structure.
- Refactored FieldExperienceDto, GuideContentDto, SignupRequest, TimelineTaskDto, and entity classes for consistent getter/setter formatting.
- Improved exception handling in GlobalExceptionHandler to return structured error responses.
- Enhanced JwtService and JwtAuthenticationFilter for better readability and maintainability.
- Refactored service classes (AuthService, GuideContentService, TimelineService, UserConditionService) for consistent constructor formatting and improved exception handling.
- Updated PiiUtils for better null checks and utility class structure.
- Cleaned up imports and removed unnecessary whitespace in various files.